--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ nav svg {
 .about p {
     line-height: 150%;
     font-size: 1.2rem;
+    font-family: 'Urbanist';
 }
 .about img {
     width: 100%;
